Shift current row after correct click

--- a/css/index.css
+++ b/css/index.css
@@ -12,5 +12,5 @@ body {
 #piano-tiles {
   /* border: 1px solid black; */
   margin-left: 35%;
-  /* margin-top: 5%; */
+  margin-top: 5%;
 }
